Implement fallback approach to authenticate with refresh token as system org user
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/testdata/auth_test.yaml
+++ b/testdata/auth_test.yaml
@@ -1,3 +1,4 @@
+# This file contains test data override information for tests in auth_system_test.go
 username: "tenant-user-name"
 password: "tenant-password"
 userOrg: "tenant-org"
