[VCDA-3475] fix authentication issue with system admin refresh tokens by implementing fallback (#116)
* Implement fallback approach to authenticate with refresh token as system org user

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* Fix authentication test cases in CAPVCD

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* deleted accidentally committed file

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

* Address review comment

Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>
(cherry picked from commit d08db029a0f30f1ab129aff9ca3f6405348e9f34)

--- a/testdata/config_test.yaml
+++ b/testdata/config_test.yaml
@@ -1,3 +1,4 @@
+# This file contains information that can be passed as input to CAPVCD via controller_manager_config config map.
 vcd:
   host: VCD_HOST
   org: ORG
