add vappmetadataUpdated in vApp (VKP branch)
Signed-off-by: ymo24 <ymo@vmware.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -276,6 +276,10 @@ spec:
                 type: boolean
               useAsManagementCluster:
                 type: boolean
+              vappmetadataUpdated:
+                description: MetadataUpdated denotes that the metadata of Vapp is
+                  updated.
+                type: boolean
             required:
             - ready
             type: object
