--- a/infrastructure-vcd/v0.8.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v0.8.0/infrastructure-components.yaml
@@ -295,6 +295,10 @@ spec:
                 type: boolean
               useAsManagementCluster:
                 type: boolean
+              vappmetadataUpdated:
+                description: MetadataUpdated denotes that the metadata of Vapp is
+                  updated.
+                type: boolean
             required:
             - ready
             type: object
