README and examples updates

--- a/examples/capi-quickstart.yaml
+++ b/examples/capi-quickstart.yaml
@@ -3,6 +3,8 @@ kind: Cluster
 metadata:
   name: capi-cluster
   namespace: default
+  labels:
+    cni: antrea
 spec:
   clusterNetwork:
     pods:
