VCDA-3661: Move from Update to Patch while updating the field vcdcluster.status.infraId.

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -270,6 +270,7 @@ spec:
               parentUid:
                 type: string
               ready:
+                default: false
                 description: Ready denotes that the vcd cluster (infrastructure) is
                   ready.
                 type: boolean
