[VCDA-3623]Bring VCDMachine.Status in parity with the VCDMachine.Spec (#122)
* VCDMachine.Status in consistent with VCDMachine.Specgitsss

Signed-off-by: ymo24 <ymo@vmware.com>

* update vcdmachine status in the correct place

Signed-off-by: ymo24 <ymo@vmware.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
@@ -248,10 +248,18 @@ spec:
                   - type
                   type: object
                 type: array
+              providerID:
+                description: ProviderID will be the container name in ProviderID format
+                  (vmware-cloud-director://<vm id>)
+                type: string
               ready:
                 description: Ready denotes that the machine (docker container) is
                   ready
                 type: boolean
+              template:
+                description: TemplatePath is the path of the template OVA that is
+                  to be used
+                type: string
             type: object
         type: object
     served: true
