support for proxy configuration
Signed-off-by: Sakthi Sundaram <sakthisunda@yahoo.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -195,6 +195,17 @@ spec:
                 type: string
               parentUid:
                 type: string
+              proxyConfig:
+                description: ProxyConfig defines HTTP proxy environment variables
+                  for containerd
+                properties:
+                  httpProxy:
+                    type: string
+                  httpsProxy:
+                    type: string
+                  noProxy:
+                    type: string
+                type: object
               rdeId:
                 type: string
               site:
