proxy variables for worker node
Signed-off-by: Sakthi Sundaram <sakthisunda@yahoo.com>

--- a/controllers/cluster_scripts/cloud_init_node.yaml
+++ b/controllers/cluster_scripts/cloud_init_node.yaml
@@ -30,6 +30,26 @@ write_files:
       sed -i 's/::1/127.0.0.1/g' /etc/hosts || true
     vmtoolsd --cmd "info-set guestinfo.postcustomization.networkconfiguration.status successful"
 
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.proxy.setting.status in_progress"
+    export HTTP_PROXY="{{.HTTPProxy}}"
+    export HTTPS_PROXY="{{.HTTPSProxy}}"
+    export http_proxy="{{.HTTPProxy}}"
+    export https_proxy="{{.HTTPSProxy}}"
+    export NO_PROXY="{{.NoProxy}}"
+    export no_proxy="{{.NoProxy}}"
+    cat <<END > /etc/systemd/system/containerd.service.d/http-proxy.conf
+    [Service]
+    Environment="HTTP_PROXY={{.HTTPProxy}}"
+    Environment="HTTPS_PROXY={{.HTTPSProxy}}"
+    Environment="http_proxy={{.HTTPProxy}}"
+    Environment="https_proxy={{.HTTPSProxy}}"
+    Environment="no_proxy={{.NoProxy}}"
+    Environment="NO_PROXY={{.NoProxy}}"
+    END
+    systemctl daemon-reload
+    systemctl restart containerd
+    vmtoolsd --cmd "info-set guestinfo.postcustomization.proxy.setting.status successful"
+
     vmtoolsd --cmd "info-set guestinfo.postcustomization.kubeadm.node.join.status in_progress"
       # tag images
       for image in "coredns" "etcd" "kube-proxy" "kube-apiserver" "kube-controller-manager" "kube-scheduler"
@@ -60,5 +80,5 @@ runcmd:
 timezone: UTC
 disable_root: false
 preserve_hostname: false
-hostname: "%s"
+hostname: "{{.MachineName}}"
 final_message: "The system is ready after $UPTIME seconds"
