--- a/rdeprojector/Dockerfile
+++ b/rdeprojector/Dockerfile
@@ -1,27 +1,31 @@
-# Build the manager binary
 FROM golang:1.16 as builder
 
-WORKDIR /workspace
-# Copy the Go Modules manifests
-COPY go.mod go.mod
-COPY go.sum go.sum
-# cache deps before building and copying source so that we don't need to re-download as much
-# and so that source changes don't invalidate our downloaded layer
-RUN go mod download
+RUN apt-get update && \
+    apt-get -y install \
+        bash \
+        git  \
+        make
 
-# Copy the go source
-COPY main.go main.go
-COPY api/ api/
-COPY controllers/ controllers/
+ADD . /go/src/github.com/vmware/rdeprojector
+WORKDIR /go/src/github.com/vmware/rdeprojector
+
+ENV	CGO_ENABLED=0
+ENV	GOOS=linux
+ENV	GOARCH=amd64
+ENV GOPATH /go
 
 # Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager main.go
+RUN ["make", "build-within-docker"]
 
-# Use distroless as minimal base image to package the manager binary
-# Refer to https://github.com/GoogleContainerTools/distroless for more details
-FROM gcr.io/distroless/static:nonroot
-WORKDIR /
-COPY --from=builder /workspace/manager .
+
+########################################################
+
+FROM photon:4.0-20210910
+
+WORKDIR /opt/vcloud/bin
+COPY --from=builder /build/vcloud/rdeprojector .
+RUN chmod +x /opt/vcloud/bin/rdeprojector
+
 USER 65532:65532
 
-ENTRYPOINT ["/manager"]
+ENTRYPOINT ["/opt/vcloud/bin/rdeprojector", "-l", "-c"]
