revert version variable in manager.yaml
Signed-off-by: ymo24 <ymo@vmware.com>

--- a/rdeprojector/config/manager/manager.yaml
+++ b/rdeprojector/config/manager/manager.yaml
@@ -31,7 +31,7 @@ spec:
         - /opt/vcloud/bin/rdeprojector
         args:
         - --leader-elect
-        image: harbor-repo.vmware.com/vcloud/rde-projector:yanmo-latest-4
+        image: harbor-repo.vmware.com/vcloud/rde-projector:main-branch
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
