Address review comments and regenerate manifests
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
@@ -122,7 +122,7 @@ spec:
                         type: string
                       storageProfile:
                         description: StorageProfile is the storage profile to be used
-                          on this machince
+                          on this machine
                         type: string
                       template:
                         description: TemplatePath is the path of the template OVA
