--- a/infrastructure-vcd/v0.8.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v0.8.0/infrastructure-components.yaml
@@ -251,12 +251,17 @@ spec:
                 type: string
               parentUid:
                 type: string
+              rdeVersionInUse:
+                default: 1.0.0
+                description: RdeVersionInUse indicates the version of capvcdCluster entity type used by CAPVCD.
+                type: string
               ready:
                 description: Ready denotes that the vcd cluster (infrastructure) is ready.
                 type: boolean
               useAsManagementCluster:
                 type: boolean
             required:
+            - rdeVersionInUse
             - ready
             type: object
         required:
@@ -421,7 +426,7 @@ spec:
                 description: SizingPolicy is the sizing policy to be used on this machine. If no sizing policy is specified, default sizing policy will be used to create the nodes
                 type: string
               storageProfile:
-                description: StorageProfile is the storage profile to be used on this machince
+                description: StorageProfile is the storage profile to be used on this machine
                 type: string
               template:
                 description: TemplatePath is the path of the template OVA that is to be used
@@ -613,7 +618,7 @@ spec:
                         description: SizingPolicy is the sizing policy to be used on this machine. If no sizing policy is specified, default sizing policy will be used to create the nodes
                         type: string
                       storageProfile:
-                        description: StorageProfile is the storage profile to be used on this machince
+                        description: StorageProfile is the storage profile to be used on this machine
                         type: string
                       template:
                         description: TemplatePath is the path of the template OVA that is to be used
