--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -280,6 +280,17 @@ spec:
                 type: string
               parentUid:
                 type: string
+              proxyConfig:
+                description: ProxyConfig defines HTTP proxy environment variables
+                  for containerd
+                properties:
+                  httpProxy:
+                    type: string
+                  httpsProxy:
+                    type: string
+                  noProxy:
+                    type: string
+                type: object
               ready:
                 default: false
                 description: Ready denotes that the vcd cluster (infrastructure) is
