--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -298,6 +298,10 @@ spec:
                 type: string
               parentUid:
                 type: string
+              rdeVersionInUse:
+                default: 1.1.0
+                description: RdeVersionInUse indicates the version of capvcdCluster entity type used by CAPVCD.
+                type: string
               ready:
                 default: false
                 description: Ready denotes that the vcd cluster (infrastructure) is ready.
