VCDA-3813: Allow control plane IP to be chosen from non-Tier0

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -187,6 +187,15 @@ spec:
                 required:
                 - vcdStorageProfileName
                 type: object
+              loadBalancer:
+                description: LoadBalancer defines loadbalancer details on a per-cluster
+                  level
+                properties:
+                  disableTier0Usage:
+                    type: boolean
+                  vipSubnetCIDR:
+                    type: string
+                type: object
               org:
                 type: string
               ovdc:
