--- a/config/manager/controller_manager_config.yaml
+++ b/config/manager/controller_manager_config.yaml
@@ -1,9 +1,6 @@
 vcd:
-  vipSubnet: ${VCD_VIP_CIDR} # Virtual IP CIDR for the external network
+  vipSubnet: "10.89.127.253/19" # Virtual IP CIDR for the external network
 loadbalancer:
-  oneArm:
-    startIP: "192.168.8.2" # First IP in the IP range used for load balancer virtual service
-    endIP: "192.168.8.100" # Last IP in the IP range used for load balancer virtual service
   ports:
     tcp: 6443
 # managementClusterRDEId is the RDE ID of this management cluster if it exists; if this cluster is a child of another CAPVCD based cluster,
@@ -11,6 +8,5 @@ loadbalancer:
 # Retrieve that RDEId using the API - https://VCD_IP/cloudapi/1.0.0/entities/types/vmware/capvcdCluster/1.0.0
 managementClusterRDEId: ""
 clusterResourceSet:
-  csi: 1.1.0 # CSI version to be used in the workload cluster
-  cpi: 1.1.0 # CPI version to be used in the workload cluster
-  cni: 0.11.3 # Antrea version to be used in the workload cluster
+  csi: 1.2.0 # CSI version to be used in the workload cluster
+  cpi: 1.1.1 # CPI version to be used in the workload cluster
