[VCDA-3837] Remove capvcd yaml (#188)
* removed capvcd config

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* updated crds

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* updated capi example

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* addressed review comments and tested

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* reading control plane port

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

* supporting control plane port

Signed-off-by: ltimothy7 <66969084+ltimothy7@users.noreply.github.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -191,8 +191,8 @@ spec:
                 description: LoadBalancer defines load-balancer configuration for
                   the Cluster both for the control plane nodes and for the CPI
                 properties:
-                  useOneArm:
-                    type: boolean
+                  vipSubnet:
+                    type: string
                 type: object
               org:
                 type: string
