keep csi cpi version vkp
Signed-off-by: ymo24 <ymo@vmware.com>

--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -817,6 +817,14 @@ rules:
   - list
   - watch
 - apiGroups:
+  - addons.cluster.x-k8s.io
+  resources:
+  - clusterresourcesetbindings
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - infrastructure.cluster.x-k8s.io
   resources:
   - vcdclusters
