--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -187,7 +187,7 @@ spec:
               loadBalancer:
                 description: LoadBalancer defines load-balancer configuration for the Cluster both for the control plane nodes and for the CPI
                 properties:
-                  useOneArm:
+                  UseOneArm:
                     type: boolean
                 type: object
               org:
@@ -959,32 +959,6 @@ subjects:
   namespace: capvcd-system
 ---
 apiVersion: v1
-data:
-  controller_manager_config.yaml: |
-    vcd:
-      vipSubnet: "" # Virtual IP CIDR for the external network
-    loadbalancer:
-      oneArm:
-        startIP: "192.168.8.2" # First IP in the IP range used for load balancer virtual service
-        endIP: "192.168.8.100" # Last IP in the IP range used for load balancer virtual service
-      ports:
-        tcp: 6443
-    # managementClusterRDEId is the RDE ID of this management cluster if it exists; if this cluster is a child of another CAPVCD based cluster,
-    # an associated RDE will be created in VCD of Entity Type "urn:vcloud:type:vmware:capvcdCluster:1.0.0".
-    # Retrieve that RDEId using the API - https://VCD_IP/cloudapi/1.0.0/entities/types/vmware/capvcdCluster/1.0.0
-    managementClusterRDEId: ""
-    clusterResourceSet:
-      csi: vkp # CSI version to be used in the workload cluster
-      cpi: vkp # CPI version to be used in the workload cluster
-      cni: 0.11.3 # Antrea version to be used in the workload cluster
-kind: ConfigMap
-metadata:
-  labels:
-    cluster.x-k8s.io/provider: infrastructure-vcd
-  name: capvcd-manager-config
-  namespace: capvcd-system
----
-apiVersion: v1
 kind: Service
 metadata:
   labels:
@@ -1054,8 +1028,6 @@ spec:
         - mountPath: /tmp/k8s-webhook-server/serving-certs
           name: cert
           readOnly: true
-        - mountPath: /etc/kubernetes/vcloud
-          name: controller-manager-config-volume
       securityContext:
         runAsNonRoot: false
       serviceAccountName: capvcd-controller-manager
@@ -1066,7 +1038,7 @@ spec:
           defaultMode: 420
           secretName: webhook-server-cert
       - configMap:
-          name: capvcd-manager-config
+          name: manager-config
         name: controller-manager-config-volume
 ---
 apiVersion: cert-manager.io/v1
