--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -18,6 +18,24 @@ rules:
   - update
   - watch
 - apiGroups:
+    - cluster.x-k8s.io
+  resources:
+    - clusters
+    - clusters/status
+  verbs:
+    - get
+    - list
+    - watch
+- apiGroups:
+    - cluster.x-k8s.io
+  resources:
+    - machines
+    - machines/status
+  verbs:
+    - get
+    - list
+    - watch
+- apiGroups:
   - ""
   resources:
   - namespaces
@@ -67,3 +85,77 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
+  - vcdmachines
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
+  - vcdmachines/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - infrastructure.cluster.x-k8s.io
+  resources:
+  - vcdmachines/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+    - controlplane.cluster.x-k8s.io
+  resources:
+    - kubeadmcontrolplanes
+  verbs:
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
+- apiGroups:
+    - infrastructure.cluster.x-k8s.io
+  resources:
+    - vcdmachinetemplates
+  verbs:
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
+- apiGroups:
+    - cluster.x-k8s.io
+  resources:
+    - machinedeployments
+  verbs:
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
+- apiGroups:
+    - bootstrap.cluster.x-k8s.io
+  resources:
+    - kubeadmconfigtemplates
+  verbs:
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
