--- a/examples/capi-quickstart.yaml
+++ b/examples/capi-quickstart.yaml
@@ -60,6 +60,9 @@ spec:
   rdeId: "urn:vcloud:entity:vmware:capvcdCluster:UUID" # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancer:
     vipSubnet: "" # Virtual IP CIDR for the external network
+  controlPlaneEndpoint:
+    host: "" # Control plane IP to be used for the cluster
+    port: 6443
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
