add storage class to vcdcluster status and rde

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -298,6 +298,22 @@ spec:
                   - type
                   type: object
                 type: array
+              defaultStorageClassOptions:
+                properties:
+                  fileSystem:
+                    default: ext4
+                    type: string
+                  k8sStorageClassName:
+                    default: cloud-director-default
+                    type: string
+                  useDeleteReclaimPolicy:
+                    default: false
+                    type: boolean
+                  vcdStorageProfileName:
+                    type: string
+                required:
+                - vcdStorageProfileName
+                type: object
               infraId:
                 type: string
               parentUid:
