--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:1.0.0-beta
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
