--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -1149,7 +1149,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:1.0.0-beta
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch
         livenessProbe:
           httpGet:
             path: /healthz
