Changed the security context used
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
