--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -187,6 +187,9 @@ spec:
                 required:
                 - vcdStorageProfileName
                 type: object
+              executeWithoutRDE:
+                default: false
+                type: boolean
               loadBalancer:
                 description: LoadBalancer defines load-balancer configuration for
                   the Cluster both for the control plane nodes and for the CPI
