--- a/examples/capi-quickstart.yaml
+++ b/examples/capi-quickstart.yaml
@@ -60,6 +60,7 @@ spec:
   rdeId: "urn:vcloud:entity:vmware:capvcdCluster:UUID" # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancer:
     vipSubnet: "" # Virtual IP CIDR for the external network
+  executeWithoutRDE: false
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
