Change case of the the flag executeWithoutRDE
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -189,6 +189,8 @@ spec:
                 type: object
               executeWithoutRDE:
                 default: false
+                description: ExecuteWithoutRDE tells CAPVCD if an RDE should be created
+                  for the cluster
                 type: boolean
               loadBalancer:
                 description: LoadBalancer defines load-balancer configuration for
