--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -16,7 +16,9 @@ spec:
         control-plane: controller-manager
     spec:
       securityContext:
-        runAsNonRoot: false
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
