--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -1181,7 +1181,9 @@ spec:
           name: cert
           readOnly: true
       securityContext:
-        runAsNonRoot: false
+        fsGroup: 2000
+        runAsGroup: 3000
+        runAsUser: 1000
       serviceAccountName: capvcd-controller-manager
       terminationGracePeriodSeconds: 10
       volumes:
