update release manifests
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -1154,6 +1154,11 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
+        env:
+        - name: GOVCD_LOG
+          value: "true"
+        - name: GOVCD_LOG_FILE
+          value: /opt/vcloud/logs/capvcd-wire-log.txt
         image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch
         livenessProbe:
           httpGet:
